// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/affix/demo/basic.vue correctly 1`] = `
<div>
  <!---->
  <div class=""><button class="ant-btn ant-btn-primary" type="button">
      <!----><span>Affix top</span>
    </button></div>
</div>
<br>
<div>
  <!---->
  <div class=""><button class="ant-btn ant-btn-primary" type="button">
      <!----><span>Affix bottom</span>
    </button></div>
</div>
`;

exports[`renders ./components/affix/demo/on-change.vue correctly 1`] = `
<div>
  <!---->
  <div class=""><button class="ant-btn ant-btn-default" type="button">
      <!----><span>120px to affix top</span>
    </button></div>
</div>
`;

exports[`renders ./components/affix/demo/target.vue correctly 1`] = `
<div id="components-affix-demo-target" class="scrollable-container">
  <div class="background">
    <div>
      <!---->
      <div class=""><button class="ant-btn ant-btn-primary" type="button">
          <!----><span>Fixed at the top of container</span>
        </button></div>
    </div>
  </div>
</div>
`;
